# piratebot

./: CMakeLists.txt  README.md  package.xml
launch/: piratebot.launch  pirateviz.launch  remote_control.launch
scripts/: pirate_control_node.py  piratebot.py
src/: joystick_ctl.cpp
